fixtures/cs-hash-01/bad/method-in-class.tsx
import crypto from "crypto";

export class Auth {
	hashPassword(password: string) {
		return crypto.createHash("md5").update(password).digest("hex");
	}
}
